--- a/LeaveMessage/MessageManageH/HTML/Write.html
+++ b/LeaveMessage/MessageManageH/HTML/Write.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>留言</title>
-    <link href="http://www.bootcss.com/p/layoutit/css/bootstrap-combined.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/Write.css">
     <script src="js/JS.js"></script>
@@ -25,8 +24,8 @@
             <a href="index.html" title="return">
                 <img src="img/返回猫.png" class="icon"/>
             </a>
-            <a href="index.html" title="leave">
-                <img src="img/提交.png"  class="icon"/>
+            <a title="leave" >
+                <input type="image" src="img/提交.png"  class="icon" onclick="submitText('TextArea')"/>
             </a>
         </div>
     </div>
@@ -35,9 +34,18 @@
 </div>
     <!--------------------留言内容----------------------------->
 <div class="message">
-    <textarea onmouseover="TMouseover">
-    </textarea>
+    <!--对文本域进行修饰-->
+    <!--<textarea id="TextArea" onmouseover="TMouseover()">-->
+    <textarea id="TextArea" ></textarea>
+    <!--清除记录-->
+    <input type="button" value="清空记录" onclick="clearText('msg')">
+    <p id="msg"></p>
 </div>
+    <div class="decoration">
+        <input type="image" src="img/表情.png" />
+        <input type="image" src="img/特效.png" />
+        <input type="image" src="img/color.png" />
+    </div>
 
 
 
