--- a/LeaveMessage/MessageManageH/HTML/index.html
+++ b/LeaveMessage/MessageManageH/HTML/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>留言板</title>
-    <link href="http://www.bootcss.com/p/layoutit/css/bootstrap-combined.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/JS.js"></script>
+    <!--外部文件-->
+    <link href="http://www.bootcss.com/p/layoutit/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link href="css/toastr.min.css" rel="stylesheet" />
+    <script src="js/toastr.min.js"></script>
 </head>
 <body>
 
@@ -19,65 +22,64 @@
 </div>
     <!-------------------------头部---------------------------->
     <div class="top">
-        <div class="top-in">
+
             <a href="login.html">
         <img src="img/我.png" class="icon"/>
             </a>
             <a href="Write.html">
         <img src="img/留言.png"  class="icon"/>
             </a>
-        </div>
     </div>
     <!----------------------留言板内容-------------------------------->
 <div class="board">
     <ul>
 
     <li class="board-item">
-        <div class="board-top">
+        <div class="board-top-left">
             <img src="img/小猫.png" class="headshot"/>
             <span id="username">用户名</span>
             <span id="time">2018-08-16</span>
         </div>
-        <div class="board-content">
+        <div id="board-content">
         </div>
     </li>
 
         <li class="board-item">
-            <div class="board-top">
+            <div class="board-top-left">
                 <img src="img/小猫.png" class="headshot"/>
                 <span id="username">用户名</span>
                 <span id="time">2018-08-16</span>
             </div>
-            <div class="board-content">
+            <div id="board-content">
             </div>
         </li>
         <li class="board-item">
-            <div class="board-top">
+            <div class="board-top-left">
                 <img src="img/小猫.png" class="headshot"/>
                 <span id="username">用户名</span>
                 <span id="time">2018-08-16</span>
             </div>
-            <div class="board-content">
-            </div>
-        </li>
-
-        <li class="board-item">
-            <div class="board-top">
-                <img src="img/小猫.png" class="headshot"/>
-                <span id="username">用户名</span>
-                <span id="time">2018-08-16</span>
-            </div>
-            <div class="board-content">
+            <div id="board-content">
             </div>
         </li>
 
         <li class="board-item">
-            <div class="board-top">
+            <div class="board-top-left">
                 <img src="img/小猫.png" class="headshot"/>
                 <span id="username">用户名</span>
                 <span id="time">2018-08-16</span>
             </div>
-            <div class="board-content">
+            <div id="board-content">
+            </div>
+        </li>
+
+        <li class="board-item">
+            <div class="board-top-left">
+                <img src="img/小猫.png" class="headshot"/>
+                <span id="username">用户名</span>
+                <span id="time">2018-08-16</span>
+            </div>
+            <div id="board-content">
             </div>
         </li>
 
