--- a/LeaveMessage/MessageManageH/HTML/login.html
+++ b/LeaveMessage/MessageManageH/HTML/login.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>登陆</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>登录</title>
+    <link rel="stylesheet" href="css/login.css">
+    <script src="js/JS.js"></script>
 </head>
 <body>
+
+<div id="content">
+    <div class="headshot">
+    </div>
+    <!--------------登录表---------------->
+    <form class="launch-form">
+        <!----------账号输入框，类型为文本----------->
+        <input type="text" placeholder="账号">
+        <!----------密码输入框，类型为密码----------->
+        <input type="password" placeholder="密码">
+        <!---------登录、注册 提交按钮--------->
+        <button type="submit" class="login" onclick="window.open('myBoard.html')">登录</button>
+        <button onclick="window.open('index.html')" >退出</button>
+    </form>
+
+
+</div>
+
 
 </body>
 </html>
