--- a/LeaveMessage/MessageManageH/HTML/index.html
+++ b/LeaveMessage/MessageManageH/HTML/index.html
@@ -22,13 +22,9 @@
 </div>
     <!-------------------------头部---------------------------->
     <div class="top">
+        <input type="image" src="img/我.png" class="icon" onclick="location.href='login.html'"/>
+        <input type="image" src="img/留言.png" class="icon" onclick="location.href='Write.html'"/>
 
-            <a href="login.html">
-        <img src="img/我.png" class="icon"/>
-            </a>
-            <a href="Write.html">
-        <img src="img/留言.png"  class="icon"/>
-            </a>
     </div>
     <!----------------------留言板内容-------------------------------->
 <div class="board">
@@ -88,11 +84,11 @@
 <!-----------------------底部----------------------------->
 <div class="foot">
     <div class="foot-jump">
-        <img title="leftTurn" src="img/跳转到.png"/>
+        <input type="image" title="leftTurn" src="img/跳转到.png"/>
         <span>1</span>
         <span>/</span>
         <span>0</span>
-        <img title="rightTurn" src="img/跳转到.png"/>
+        <input type="image"  title="rightTurn" src="img/跳转到.png"/>
         <input type="text" />
         <input type="image" src="img/跳转.png" class="toJump"/>
     </div>
