--- a/LeaveMessage/MessageManageH/HTML/Write.html
+++ b/LeaveMessage/MessageManageH/HTML/Write.html
@@ -39,8 +39,7 @@
     <form class="note">
         <img src="img/签名.png" />
         <a>
-    <input type="text" placeholder="签名" id="name"
-           autocomplete="off" onmouseover="TMouseover()"/>
+    <input type="text" placeholder="签名" id="name" autocomplete="off"/>
         </a>
     </form>
         <!----留言板修饰-->
@@ -84,7 +83,7 @@
         </table>
 
     </div>
-</input>
+
 
     <!--清除记录-->
     <input type="button" value="清空记录" onclick="clearText('msg')">
