解决了html中樱花img显示问题，及樱花降落时出现水平和垂直滚动条问题

--- a/LeaveMessage/MessageManageH/HTML/index.html
+++ b/LeaveMessage/MessageManageH/HTML/index.html
@@ -9,8 +9,7 @@
     <script src="js/JS.js"></script>
     <!--外部文件-->
     <link href="http://www.bootcss.com/p/layoutit/css/bootstrap-combined.min.css" rel="stylesheet">
-    <link href="css/toastr.min.css" rel="stylesheet" />
-    <script src="js/toastr.min.js"></script>
+
 </head>
 <body>
 
@@ -84,11 +83,11 @@
 <!-----------------------底部----------------------------->
 <div class="foot">
     <div class="foot-jump">
-        <input type="image" title="leftTurn" src="img/跳转到.png"/>
+        <input type="image" title="leftTurn" src="img/跳转到.png" />
         <span>1</span>
         <span>/</span>
         <span>0</span>
-        <input type="image"  title="rightTurn" src="img/跳转到.png"/>
+        <input type="image" src="img/跳转到.png" title="rightTurn"/>
         <input type="text" />
         <input type="image" src="img/跳转.png" class="toJump"/>
     </div>
