--- a/LeaveMessage/MessageManageH/HTML/myBoard.html
+++ b/LeaveMessage/MessageManageH/HTML/myBoard.html
@@ -23,10 +23,10 @@
     </div>
     <!-------------------------头部---------------------------->
     <div class="top">
-        <input type="image" src="img/走猫.png" title="return" class="icon" onclick="location.href='index.html'"/>
+        <input type="image" src="img/走猫.png" title="leave" class="icon" onclick="location.href='index.html'"/>
 
             <div type="text" title="iw">
-            <input type="image" src="img/编辑.png" title="w" class="icon" onclick="location.href='Write.html'"/>
+            <input type="image" src="img/编辑.png" title="write" class="icon" onclick="location.href='Write.html'"/>
             </div>
 
     </div>
@@ -42,7 +42,7 @@
                     <span id="time">2018-08-16</span>
                 </div>
                     <div class="board-top-right">
-                        <input type="image" src="img/删除.png" class="del">
+                        <input type="image" title="delete" src="img/删除.png" class="del">
                 </div>
 
                 <div id="board-content">
