个人信息、注册界面完成

--- a/LeaveMessage/MessageManageH/HTML/Write.html
+++ b/LeaveMessage/MessageManageH/HTML/Write.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>留言</title>
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/Write.css">
+    <link rel="stylesheet" href="css/Write-Info.css">
     <script src="js/JS.js"></script>
 
 </head>
@@ -22,7 +22,7 @@
     <!-------------------------头部---------------------------->
     <div class="top">
             <input type="image" src="img/返回猫.png" title="return" class="icon" onclick="javascript:history.back(-1);"/>
-            <input type="image" src="img/提交.png"  title="leave" class="icon" onclick="submitText('TextArea')"/>
+            <input type="image" src="img/提交.png"  title="submit" class="icon" onclick="submitText('TextArea')"/>
     </div>
 
 <div>
