--- a/LeaveMessage/MessageManageH/HTML/info.html
+++ b/LeaveMessage/MessageManageH/HTML/info.html
@@ -2,9 +2,148 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>个人信息</title>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/Write-Info.css">
+    <script src="js/JS.js"></script>
+
+
 </head>
 <body>
 
+<div id="content">
+    <!----------------------------------------------------------顶部--------------------------->
+    <div class="head">
+        <img src="img/猫头.png" class="Logo"/>
+    </div>
+
+    <!-----------------------------------------------------------头部---------------------------->
+    <!--------返回猫样式-------->
+    <style>
+        .top [title="return"]
+        {
+            margin-left: 4%;
+        }
+    </style>
+    <!-------头部---------->
+    <div class="top">
+        <input type="image" src="img/返回猫.png" title="return" class="icon" onclick="javascript:history.back(-1);"/>
+    </div>
+
+    <!-----------------------------------js: 获取账户名和密码----------------------------------------->
+    <script type="text/javascript">
+        //获取发布模块类型
+        var uN="";
+        var uP="";
+        var uS="";
+        var uB="";
+        function pageReady()
+        {
+            ("http://#/user").
+            query(function (data){
+                    $.each(data,function(i,o){
+                        uN=o.user_name;
+                        uP="<input type='password'  value='o.password' class='uPass' readonly />";
+                    });
+
+                    $("#uName").html(uN);
+                    $("#uPassword").html(uP);
+
+                    //修改时显示原信息
+                    document.getElementById("Name").value=uN;
+
+                }
+            )
+        }
+
+    </script>
+    <!------------------------------------js：修改信息------------------------------------------------------->
+    <script type="text/javascript">
+        //获取发布模块类型
+        function updateInfo(){
+            var json = {
+                "user_name":$("#Name").val(),
+                "password": $("#Password").val(),
+            };
+
+            "http://#/update".submit(json, function (data, msg) {
+                    $.msg("修改成功!" + "<br>" + "3秒后自动刷新");
+                    setTimeout(function () {  //使用  setTimeout（）方法设定定时3000毫秒
+                        window.location.reload();//页面刷新
+                    }, 3000);
+                });
+        }
+    </script>
+    <!--------------------------------------------------------------个人信息----------------------------------------------->
+        <div id="ShowInfo">
+            <!------------显示的个人信息-------------->
+            <form>
+                <!-------------账号-------------->
+                <div class="form-group">
+                    <img src="img/账号.png" />
+                    <span id="uId">1725121025</span>
+                    </div>
+                <!-------------用户名-------------->
+                <div class="form-group">
+                    <img src="img/用户名.png" />
+                    <span id="uName"></span>
+                </div>
+                <!-------------密码-------------->
+                <div class="form-group">
+                    <img src="img/密码.png" />
+                    <span id="uPassword"></span>
+                </div>
+                <!------------点击修改个人信息按钮-------------->
+                <div class="form-group">
+                    <button type="button" class="mo" onclick="isHidden('Modify')" >Reset</button>
+                </div>
+            </form>
+        </div>
+
+
+    <!----------------------------------------修改个人信息----------------------------------------------------------------->
+        <div id="Modify">
+             <form >
+                 <!-------------用户名-------------->
+                 <div class="form-group">
+                     <img src="img/用户名.png" />
+                     <input type="text" autocomplete="off" id="Name" placeholder="name" >
+                 </div>
+                 <!-------------密码-------------->
+                 <div class="form-group">
+                     <img src="img/密码.png" />
+                     <input type="password" id="pw" autocomplete="off" placeholder="password">
+                 </div>
+                 <!-------------密码-------------->
+                 <div class="form-group">
+                     <img src="img/密码确认.png" />
+                     <input type="password" id="Password" autocomplete="off" placeholder="again">
+                 </div>
+                 <!---------------按钮-------------->
+                 <div class="form-group">
+                 <!-------------点击确认-------------->
+                     <button type="button" class="co" onclick="updateInfo()">Ok</button>
+                <!------------点击返回--------------->
+                     <button type="button" class="re" onclick="isHidden('Modify')">Back</button>
+                  </div>
+             </form>
+        </div>
+
+
+    <!-------------------------------------------------隐藏js----------------------------------------->
+    <script type="text/javascript">
+        function isHidden(hidMenu)
+        {
+            var hMenu=document.getElementById(hidMenu);
+            hMenu.style.display=(hMenu.style.display=='block')?'none':'block';
+            var sMenu=document.getElementById("ShowInfo");
+            sMenu.style.display=(sMenu.style.display=='none')?'block':'none';
+        }
+    </script>
+
+
+</div>
 </body>
 </html>
