--- a/LeaveMessage/MessageManageH/HTML/index.html
+++ b/LeaveMessage/MessageManageH/HTML/index.html
@@ -21,8 +21,8 @@
 </div>
     <!-------------------------头部---------------------------->
     <div class="top">
-        <input type="image" src="img/我.png" class="icon" onclick="location.href='login.html'"/>
-        <input type="image" src="img/留言.png" class="icon" onclick="location.href='Write.html'"/>
+        <input type="image" src="img/我.png" title="login" class="icon" onclick="location.href='login.html'"/>
+        <input type="image" src="img/留言.png" title="write" class="icon" onclick="location.href='Write.html'"/>
 
     </div>
     <!----------------------留言板内容-------------------------------->
@@ -80,18 +80,18 @@
 
 </ul>
 </div>
-<!-----------------------底部----------------------------->
-<div class="foot">
-    <div class="foot-jump">
-        <input type="image" title="leftTurn" src="img/跳转到.png" />
-        <span>1</span>
-        <span>/</span>
-        <span>0</span>
-        <input type="image" src="img/跳转到.png" title="rightTurn"/>
-        <input type="text" />
-        <input type="image" src="img/跳转.png" class="toJump"/>
+    <!-----------------------底部----------------------------->
+    <div class="foot">
+        <div class="foot-jump">
+            <input type="image" src="img/跳转到.png" title="previous"/>
+            <span>1</span>
+            <span>/</span>
+            <span>0</span>
+            <input type="image" src="img/跳转到.png" title="next"/>
+            <input type="text" />
+            <input type="image" src="img/跳转.png" title="jump"/>
+        </div>
     </div>
-</div>
 
     <!------------------@版权所有------------------------------>
     <div class="copyright">
