--- a/LeaveMessage/MessageManageH/HTML/myBoard.html
+++ b/LeaveMessage/MessageManageH/HTML/myBoard.html
@@ -7,7 +7,7 @@
     <title>我的留言板</title>
     <link href="http://www.bootcss.com/p/layoutit/css/bootstrap-combined.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/myBoard.css">
+    <link rel="stylesheet" href="css/myBoard-Manager.css">
     <script src="js/JS.js"></script>
 </head>
 <body>
@@ -16,7 +16,7 @@
 
     <!----------------------------顶部--------------------------->
     <div class="head">
-        <img src="img/主页猫.png" href="index.html" class="Logo"/>
+        <input type="image" src="img/主页猫.png"  title="ME" class="Logo" onclick="location.href='info.html'"/>
         <div>
         <input type="image" src="img/未读.png" title="news" class="icon" onclick="location.href='Manager.html'" />
         </div>
@@ -42,7 +42,8 @@
                     <span id="time">2018-08-16</span>
                 </div>
                     <div class="board-top-right">
-                        <input type="image" title="delete" src="img/删除.png" class="del">
+                        <input type="image" src="img/删除.png"  title="delete" class="del">
+                        <input type="image" src="img/重新编辑.png" title="edit" class="del">
                 </div>
 
                 <div id="board-content">
@@ -60,13 +61,13 @@
     <!-----------------------底部----------------------------->
     <div class="foot">
         <div class="foot-jump">
-            <img title="leftTurn" src="img/跳转到.png"/>
+            <input type="image" src="img/跳转到.png" title="previous"/>
             <span>1</span>
             <span>/</span>
             <span>0</span>
-            <img title="rightTurn" src="img/跳转到.png"/>
+            <input type="image" src="img/跳转到.png" title="next"/>
             <input type="text" />
-            <input type="image" src="img/跳转.png" class="toJump"/>
+            <input type="image" src="img/跳转.png" title="jump"/>
         </div>
     </div>
 
