--- a/LeaveMessage/MessageManageH/HTML/index.html
+++ b/LeaveMessage/MessageManageH/HTML/index.html
@@ -73,7 +73,7 @@
                         "<img src='img/小猫.png' class='headshot'/>";
                     html+="<span id='username'>"+o.name+"</span>";
                     html+="<span id='time'>"+o.time+"</span></div>";
-                    html+="<div id='board-content'>"+o.message+"</div></li>";
+                    html+="<div id='board-incontent'>"+o.message+"</div></li>";
                 });
                 $("#BoardShow").html(html);
             }
