解决登陆注册问题。登陆时ajax获取json数据，注册时利用app.js中的一些便利直接提交数据（非json）

--- a/LeaveMessage/MessageManageH/HTML/index.html
+++ b/LeaveMessage/MessageManageH/HTML/index.html
@@ -65,14 +65,14 @@
     function pageReady()
     {
         var  html="";
-        ("http://#").
+        ("http://localhost:8080/messagemanage/showboard").
         query(function (data){
                 $.each(data,function(i,o){
                     html+=" <li class='board-item'> " +
                         "<div class='board-top-left'>" +
                         "<img src='img/小猫.png' class='headshot'/>";
                     html+="<span id='username'>"+o.name+"</span>";
-                    html+="<span id='time'>"+o.time+"</span></div>";
+                    // html+="<span id='time'>"+o.time+"</span></div>";
                     html+="<div id='board-incontent'>"+o.message+"</div></li>";
                 });
                 $("#BoardShow").html(html);
